--- a/BlazorTool.Client/Components/NewActivityFormComponent.razor
+++ b/BlazorTool.Client/Components/NewActivityFormComponent.razor
@@ -2,6 +2,8 @@
 @using BlazorTool.Client.Services
 @using Telerik.Blazor.Components
 @using System.ComponentModel.DataAnnotations
+@using Telerik.Blazor.Components.Editor
+@using EditorNS = Telerik.Blazor.Components.Editor;
 @inject IStringLocalizer<Resources.UIStrings> Localizer
 
 @inject ApiServiceClient ApiClient
@@ -87,7 +89,7 @@
                         <Template>
                             <div style="display: flex; align-items: center;">
                                 <label class="k-label k-form-label" style="min-width:@minWidthLabel; margin-right: 10px;">@Localizer["ActivityList_Description"]:</label>
-                                <TelerikTextArea @bind-Value="@ActivityFormModel.Description" Rows="5" Placeholder="@Localizer["ActivityList_Description_Placeholder"]" />
+                                <TelerikEditor  @bind-Value="@ActivityFormModel.Description" Tools="@customTools" Width="100%" />
                             </div>
                             <ValidationMessage For="@(() => ActivityFormModel.Description)" />
                         </Template>
@@ -143,9 +145,10 @@
     private List<WODict> ActivityCategories { get; set; } = new List<WODict>();
     private string ErrorMessage { get; set; } = string.Empty;
     private string minWidthLabel = "180px";
-
+    public List<IEditorTool> customTools { get; set; } = new();
     protected override async Task OnInitializedAsync()
     {
+        CreateEditorToolBar();
         Devices = await ApiClient.GetAllDevicesAsync();
         WorkOrders = await ApiClient.GetWorkOrdersCachedAsync();
         var wo = WorkOrders.FirstOrDefault(w => w.WorkOrderID == ActivityFormModel.WorkOrderID);
@@ -251,5 +254,20 @@
         ActivityFormModel = new NewActivityFormModel();
         ErrorMessage = string.Empty;
         OnActivityAdded.InvokeAsync(null);
+    }
+
+    private void CreateEditorToolBar()
+    {
+        customTools = new List<IEditorTool>(EditorToolSets.Default);
+        var UndoRedoGroup = new EditorButtonGroup(
+            new EditorNS.Undo(), // add individual tools to the group
+            new EditorNS.Redo()
+        );
+        customTools.RemoveAt(1);
+        customTools.RemoveAt(1);
+        customTools.RemoveAt(customTools.Count()-1);
+        customTools.RemoveAt(customTools.Count()-1);
+
+        customTools.Insert(0, UndoRedoGroup);
     }
 }
